fixed auto collapse

--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@
   }
 
   .loader {
-    animation: spin 1s linear infinite;
+    animation: spin 800ms linear infinite;
     height: 10px;
     width: 10px;
     position: absolute;
